// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules|Dropdown default 1`] = `
.c0 {
  padding: 12px;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #999;
  --focus-color: 153,153,153;
}

.c4:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c4:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c4:active,
.c4.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c4:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c4[disabled] {
  pointer-events: none;
}

.c4[disabled]:after {
  display: block;
}

.c4 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c3 {
  display: block;
}

.c2 {
  position: relative;
  width: 100%;
}

.c5 {
  box-sizing: border-box;
  position: absolute;
  background-color: #f9f9f9;
  box-shadow: 0 5px 15px rgba(0,0,0,0.08);
  z-index: 1;
  min-width: 160px;
  visibility: hidden;
}

.c1 {
  height: 500px;
  background-color: lightgray;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
    height={500}
  >
    <div>
      <div
        className="c2"
        data-test="dropdown"
      >
        <div
          className="c3"
        >
          <button
            className="c4"
            onClick={[Function]}
          >
            Click me
          </button>
          <div
            className="c5"
            data-test="dropdown-content"
            open={false}
          >
            <div
              className=""
            >
              <div
                style={
                  Object {
                    "width": 300,
                  }
                }
              >
                Sed nisi veniam earum ex culpa eveniet debitis et. Voluptatem et delectus praesentium et unde ut quibusdam in. Consequuntur quos hic animi ipsam. Tenetur deserunt eius. Dolore consequatur et ipsam ut saepe. In perspiciatis sit consectetur temporibus officia laborum quae illo.
 
Ab soluta in sint in alias. Reiciendis repellendus autem aliquam aut vitae id nesciunt eum. In esse et ut.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules|Dropdown position 1`] = `
.c0 {
  padding: 12px;
}

.c7 {
  padding: 0.625em;
  width: 200px;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #999;
  --focus-color: 153,153,153;
}

.c5:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c5:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c5:active,
.c5.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c5:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c5[disabled] {
  pointer-events: none;
}

.c5[disabled]:after {
  display: block;
}

.c5 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c4 {
  display: block;
}

.c3 {
  position: relative;
  width: 100%;
}

.c6 {
  box-sizing: border-box;
  position: absolute;
  background-color: #f9f9f9;
  box-shadow: 0 5px 15px rgba(0,0,0,0.08);
  z-index: 1;
  min-width: 160px;
  visibility: hidden;
}

.c1 {
  width: 1000px;
  height: 500px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(4, fit-content(200px));
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
    height={500}
    width={1000}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        data-test="dropdown"
      >
        <div
          className="c4"
        >
          <button
            className="c5"
            onClick={[Function]}
          >
            position right
          </button>
          <div
            className="c6"
            data-test="dropdown-content"
            open={false}
          >
            <div
              className=""
            >
              <div
                className="c7"
                width={200}
              >
                Officia optio placeat architecto vero eaque possimus temporibus. Ut et consequatur quia voluptatem tempore totam qui. Eum labore velit voluptatem in. Voluptatem magni dolorum natus et dolorem aut.
 
Nobis velit ad molestiae aut nisi eius quibusdam. Aut recusandae et. Nam sint enim sit magnam ullam at ut non. Et amet sunt vitae minus quae occaecati dignissimos assumenda.
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c3"
        data-test="dropdown"
      >
        <div
          className="c4"
        >
          <button
            className="c5"
            onClick={[Function]}
          >
            position left
          </button>
          <div
            className="c6"
            data-test="dropdown-content"
            open={false}
          >
            <div
              className=""
            >
              <div
                className="c7"
                width={200}
              >
                Et laudantium vel nisi quidem et est. Nihil beatae labore voluptatibus quae sit. Vel et officiis architecto est.
 
Amet neque cupiditate totam et nisi voluptatum. Nulla deserunt quo enim. Sint ut voluptates totam. Eius aut odio adipisci deleniti. Sit qui aut quia quas dolore.
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c3"
        data-test="dropdown"
      >
        <div
          className="c4"
        >
          <button
            className="c5"
            onClick={[Function]}
          >
            position top
          </button>
          <div
            className="c6"
            data-test="dropdown-content"
            open={false}
          >
            <div
              className=""
            >
              <div
                className="c7"
                width={200}
              >
                Illo esse nesciunt et id ut voluptatem aut necessitatibus. Temporibus voluptatum eius sequi velit dolorum soluta. Sequi et excepturi qui doloribus facere ratione. Ab occaecati eveniet repellendus. Voluptatem enim quia reprehenderit officiis vitae nulla aliquid.
 
Et fuga hic. Dolorem fuga at quia. Quae et est. Omnis est voluptate et nihil aperiam qui assumenda. Minus corporis quaerat ipsam quaerat tempora harum tempore nisi omnis.
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c3"
        data-test="dropdown"
      >
        <div
          className="c4"
        >
          <button
            className="c5"
            onClick={[Function]}
          >
            position bottom
          </button>
          <div
            className="c6"
            data-test="dropdown-content"
            open={false}
          >
            <div
              className=""
            >
              <div
                className="c7"
                width={200}
              >
                Ducimus et dolor quae doloribus ducimus ullam. Qui ea ut omnis ut velit aut delectus quidem sed. Asperiores perspiciatis distinctio non consequatur dolores praesentium ex rerum accusantium. Nesciunt in maxime sint doloremque ipsam consequatur. Eos aut eligendi deleniti eligendi corrupti amet voluptas. Iste culpa enim doloribus corrupti sed.
 
Tempora voluptatem est placeat. Blanditiis velit inventore aut molestias laudantium non est quibusdam corporis. Corrupti accusantium sed deserunt sunt. Dolorem vel quas placeat temporibus excepturi ut ut eius.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
